--- a/reference/goodReads_finalProject/src/main/resources/templates/account/reset-password.html
+++ b/reference/goodReads_finalProject/src/main/resources/templates/account/reset-password.html
@@ -16,6 +16,21 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- Main css -->
     <link rel="stylesheet" th:href="@{account/css/style.css}">
+    <style>
+        #show-password {
+            display: inline-block;
+            cursor: pointer;
+        }
+
+        .label-of-show-pass {
+            display: inline-block;
+            -webkit-transform: translateY(-10%);
+            position: relative;
+            cursor: pointer;
+
+        }
+
+    </style>
 </head>
 
 <body class="main m-0">
@@ -39,6 +54,13 @@
                         <input type="password" name="re-pass" id="re-pass" placeholder="Repeat your password"/>
                     </div>
 
+                    <div class="form-group">
+
+                        <input type="checkbox" id="show-password"/>
+                        <label for="show-password" class="label-of-show-pass">Show password</label>
+
+                    </div>
+
                 </form>
                 <div class="form-group form-button">
                     <input type="submit" name="reset" id="reset" class="form-submit w-100" value="Submit"/>
@@ -60,6 +82,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
         integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
 <script src="account/js/main.js"></script>
 
 
@@ -102,11 +126,11 @@
             let newPassword = $("#password").val();
             let request = {
                 "otpCode": otpCode,
-                "newPassword": newPassword
+                "newPassword": CryptoJS.MD5(newPassword).toString()
             }
             console.log(request)
             $.ajax({
-                url: "/api/v1/users/password-reset",
+                url: "/api/v1/anonymous/password-reset",
                 type: 'PUT',
                 data: JSON.stringify(request),
                 contentType: "application/json; charset=utf-8",
@@ -131,6 +155,22 @@
                 $("#reset").click();
             }
         });
+
+        $('#show-password').change(function () {
+            if ($(this).is(':checked')) {
+                $('#password').prop('type', 'text')
+                $('#re-pass').prop('type', 'text')
+            } else {
+                $('#password').prop('type', 'password')
+                $('#re-pass').prop('type', 'password')
+            }
+        })
+
+        $('#password, #re-pass').on('keyup', function (event) {
+            if (event.key !== 'Enter') {
+                $('#reset-form').validate().resetForm();
+            }
+        })
     })
 </script>
 </body>
