--- a/reference/goodReads_finalProject/src/main/resources/templates/fragments/header.html
+++ b/reference/goodReads_finalProject/src/main/resources/templates/fragments/header.html
@@ -9,14 +9,16 @@
                         <strong class="tg-logo"><a th:href="@{/}"><img th:src="@{/original/images/logo.png}"
                                                                        alt="company name here"></a></strong>
                         <div class="tg-searchbox">
-                            <form class="tg-formtheme tg-formsearch">
+
+
+                            <div class="tg-formtheme tg-formsearch">
                                 <fieldset>
-                                    <input type="text" name="search" class="typeahead form-control"
-                                           placeholder="Search by title, author, keyword, ISBN...">
-                                    <button type="submit" class="tg-btn">Search</button>
+                                    <input type="text" id="search-input" name="search" class="typeahead form-control"
+                                           placeholder="Search by title or author...">
+                                    <button id="search-btn" class="tg-btn">Search</button>
                                 </fieldset>
-                                <a href="javascript:void(0);">+ Advanced Search</a>
-                            </form>
+                                <a style="color: white">+ Advanced Search</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -873,7 +875,7 @@
                                             </div>
                                         </li>
                                         <li><a th:href="@{/}">Home</a></li>
-                                        <li><a th:href="@{/api/v1/users/books/book-reading}">My Books</a></li>
+                                        <li><a th:href="@{/users/my-book}">My Books</a></li>
                                         <li class="menu-item-has-children">
                                             <a href="javascript:void(0);">Browse</a>
                                             <ul class="sub-menu">
@@ -893,16 +895,16 @@
                                         <li class="menu-item-has-children">
                                             <a href="javascript:void(0);"><i class="icon-menu"></i></a>
                                             <ul class="sub-menu">
-                                                <li class="menu-item-has-children">
-                                                    <a href="aboutus.html">Products</a>
-                                                    <ul class="sub-menu">
-                                                        <li><a href="products.html">Products</a></li>
-                                                        <li><a href="productdetail.html">Product Detail</a></li>
-                                                    </ul>
-                                                </li>
+                                                <!--                                                <li class="menu-item-has-children">-->
+                                                <!--                                                    <a href="aboutus.html">Products</a>-->
+                                                <!--                                                    <ul class="sub-menu">-->
+                                                <!--                                                        <li><a href="/books">Books</a></li>-->
+                                                <!--                                                        <li><a href="productdetail.html">Product Detail</a></li>-->
+                                                <!--                                                    </ul>-->
+                                                <!--                                                </li>-->
+                                                <li><a href="/books?pageIndex=1&pageSize=8">Books</a></li>
                                                 <li><a href="aboutus.html">About Us</a></li>
-                                                <li><a href="404error.html">404 Error</a></li>
-                                                <li><a href="comingsoon.html">Coming Soon</a></li>
+
                                             </ul>
                                         </li>
                                     </ul>
