--- a/reference/goodReads_finalProject/src/main/resources/templates/fragments/sidebar.html
+++ b/reference/goodReads_finalProject/src/main/resources/templates/fragments/sidebar.html
@@ -1,19 +1,7 @@
 <th:block th:fragment="sidebar">
 
     <aside id="tg-sidebar" class="tg-sidebar">
-        <div class="tg-widget tg-widgetsearch">
-            <form class="tg-formtheme tg-formsearch">
-                <div class="form-group">
-<!--                    <button type="submit"><i class="icon-magnifier"></i></button>-->
-<!--                    <input type="search" name="search" class="form-group"-->
-<!--                           placeholder="Search by title, author, key...">-->
-                    <input type="text" name="search" class="typeahead form-control"
-                           placeholder="Search by title, author, key...">
-                    <button type="submit"><i class="icon-magnifier"></i></button>
 
-                </div>
-            </form>
-        </div>
         <div class="tg-widget tg-catagories">
             <div class="tg-widgettitle">
                 <h3>Categories</h3>
@@ -119,140 +107,140 @@
                 </ul>
             </div>
         </div>
-        <div class="tg-widget tg-widgetinstagram">
-            <div class="tg-widgettitle">
-                <h3>Instagram</h3>
-            </div>
-            <div class="tg-widgetcontent">
-                <ul>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-01.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-02.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-03.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-04.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-05.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-06.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-07.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-08.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                    <li>
-                        <figure>
-                            <img src="images/instagram/img-09.jpg" alt="image description">
-                            <figcaption><a href="javascript:void(0);"><i
-                                    class="icon-heart"></i><em>50,134</em></a>
-                            </figcaption>
-                        </figure>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="tg-widget tg-widgetblogers">
-            <div class="tg-widgettitle">
-                <h3>Top Bloogers</h3>
-            </div>
-            <div class="tg-widgetcontent">
-                <ul>
-                    <li>
-                        <div class="tg-author">
-                            <figure><a href="javascript:void(0);"><img
-                                    src="images/author/imag-03.jpg" alt="image description"></a>
-                            </figure>
-                            <div class="tg-authorcontent">
-                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                <span>21,658 Published Books</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="tg-author">
-                            <figure><a href="javascript:void(0);"><img
-                                    src="images/author/imag-04.jpg" alt="image description"></a>
-                            </figure>
-                            <div class="tg-authorcontent">
-                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                <span>21,658 Published Books</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="tg-author">
-                            <figure><a href="javascript:void(0);"><img
-                                    src="images/author/imag-05.jpg" alt="image description"></a>
-                            </figure>
-                            <div class="tg-authorcontent">
-                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                <span>21,658 Published Books</span>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="tg-author">
-                            <figure><a href="javascript:void(0);"><img
-                                    src="images/author/imag-06.jpg" alt="image description"></a>
-                            </figure>
-                            <div class="tg-authorcontent">
-                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>
-                                <span>21,658 Published Books</span>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<!--        <div class="tg-widget tg-widgetinstagram">-->
+<!--            <div class="tg-widgettitle">-->
+<!--                <h3>Instagram</h3>-->
+<!--            </div>-->
+<!--            <div class="tg-widgetcontent">-->
+<!--                <ul>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-01.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-02.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-03.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-04.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-05.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-06.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-07.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-08.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <figure>-->
+<!--                            <img src="images/instagram/img-09.jpg" alt="image description">-->
+<!--                            <figcaption><a href="javascript:void(0);"><i-->
+<!--                                    class="icon-heart"></i><em>50,134</em></a>-->
+<!--                            </figcaption>-->
+<!--                        </figure>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="tg-widget tg-widgetblogers">-->
+<!--            <div class="tg-widgettitle">-->
+<!--                <h3>Top Bloogers</h3>-->
+<!--            </div>-->
+<!--            <div class="tg-widgetcontent">-->
+<!--                <ul>-->
+<!--                    <li>-->
+<!--                        <div class="tg-author">-->
+<!--                            <figure><a href="javascript:void(0);"><img-->
+<!--                                    src="images/author/imag-03.jpg" alt="image description"></a>-->
+<!--                            </figure>-->
+<!--                            <div class="tg-authorcontent">-->
+<!--                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>-->
+<!--                                <span>21,658 Published Books</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <div class="tg-author">-->
+<!--                            <figure><a href="javascript:void(0);"><img-->
+<!--                                    src="images/author/imag-04.jpg" alt="image description"></a>-->
+<!--                            </figure>-->
+<!--                            <div class="tg-authorcontent">-->
+<!--                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>-->
+<!--                                <span>21,658 Published Books</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <div class="tg-author">-->
+<!--                            <figure><a href="javascript:void(0);"><img-->
+<!--                                    src="images/author/imag-05.jpg" alt="image description"></a>-->
+<!--                            </figure>-->
+<!--                            <div class="tg-authorcontent">-->
+<!--                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>-->
+<!--                                <span>21,658 Published Books</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <li>-->
+<!--                        <div class="tg-author">-->
+<!--                            <figure><a href="javascript:void(0);"><img-->
+<!--                                    src="images/author/imag-06.jpg" alt="image description"></a>-->
+<!--                            </figure>-->
+<!--                            <div class="tg-authorcontent">-->
+<!--                                <h2><a href="javascript:void(0);">Jude Morphew</a></h2>-->
+<!--                                <span>21,658 Published Books</span>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </div>-->
+<!--        </div>-->
     </aside>
 
 </th:block>
