--- a/FINAL/travel-booking/src/main/resources/templates/user/index.html
+++ b/FINAL/travel-booking/src/main/resources/templates/user/index.html
@@ -474,16 +474,31 @@
                 const location = $('.location').val();
                 const numberOfGuests = $('#guest-number').val();
 
-                let url = `/hotels`
+                // Chuyển đổi ngày tháng sang đối tượng Date
+                const checkinDate = parseDate(checkin, 'DD/MM/YYYY');
+                const checkoutDate = parseDate(checkout, 'DD/MM/YYYY');
+
+                // Kiểm tra ngày check-in không được là ngày trong quá khứ
+                const currentDate = new Date();
+                const startDate = new Date(checkinDate);
+                if (startDate < currentDate) {
+                    toastr.error('Vui lòng chọn ngày check-in, check-out hợp lệ.');
+                    return;
+                } else if (checkin === checkout) {
+                    toastr.error('Vui lòng chọn ngày check-in và check-out khác nhau');
+                    return;
+                }
+
+                let url = `/hotels`;
 
                 if (location !== '') {
                     url += `?location=${location}`;
                 }
                 if (checkin !== '') {
-                    url += `${location ? '&' : '?'}checkin=${checkin}`
+                    url += `${location ? '&' : '?'}checkin=${checkinDate}`
                 }
                 if (checkout !== '') {
-                    url += `${checkin ? '&' : '?'}checkout=${checkout}`
+                    url += `${checkin ? '&' : '?'}checkout=${checkoutDate}`
                 }
                 if (numberOfGuests !== '' && numberOfGuests != null) {
                     url += `${location || checkin ? '&' : '?'}guests=${numberOfGuests}`
@@ -491,15 +506,7 @@
 
                 window.location.href = url;
 
-                // // Chuyển đổi ngày tháng sang đối tượng Date
-                // const checkinDate = parseDate(checkin, 'DD/MM/YYYY');
-                // const checkoutDate = parseDate(checkout, 'DD/MM/YYYY');
-                // const formData = {
-                //     location: location,
-                //     checkinDate: checkinDate,
-                //     checkoutDate: checkoutDate,
-                //     numberOfGuests: numberOfGuests
-                // };
+
                 // console.log(formData);
                 // $.ajax({
                 //     url: "/hotels",
