--- a/reference/goodReads_finalProject/src/main/resources/templates/account/login.html
+++ b/reference/goodReads_finalProject/src/main/resources/templates/account/login.html
@@ -16,11 +16,6 @@
     <!-- Main css -->
     <link rel="stylesheet" th:href="@{/account/css/style.css}">
 
-
-    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">-->
-    <!--    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>-->
-    <!--    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>-->
-    <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>-->
 </head>
 <body class="main">
 
@@ -29,8 +24,7 @@
     <div class="container">
         <div class="signin-content">
             <div class="signin-image">
-                <figure><img th:src="@{/account/img/signin-image.jpg}" alt="sing up image"></figure>
-
+                <figure><a href="/"><img th:src="@{/account/img/signin-image.jpg}" alt="sing up image">Homepage</a></figure>
             </div>
 
             <div class="signin-form">
@@ -44,6 +38,12 @@
                         <label for="password"><i class="zmdi zmdi-lock"></i></label>
                         <input type="password" name="password" id="password" placeholder="Password"/>
                     </div>
+                    <div class="form-group">
+
+                        <input type="checkbox" id="show-password"/>
+                        <label for="show-password" class="label-of-show-pass">Show password</label>
+
+                    </div>
                 </form>
 
                 <div class="form-group form-button mb-5">
@@ -52,6 +52,7 @@
 
                 <!--                <a href="" class="link forgot-password-link">Forgot password?</a>-->
                 <button class="btn link forgot-password-link">Forgot password?</button>
+
                 <button onclick=window.location.href='http://localhost:8080/signup' class="btn link signup-image-link">
                     Create an account?
                 </button>
@@ -70,6 +71,8 @@
 <!--<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
@@ -77,6 +80,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script th:src="@{/handle/authentication.js}"></script>
 
-
+<script>
+    $(document).ready(function () {
+        console.log(CryptoJS.MD5('admin123').toString())
+        console.log(CryptoJS.MD5('123456').toString())
+        $('#email, #password  ').on('keyup', function (event) {
+            if (event.key !== 'Enter') {
+                $('#login-form').validate().resetForm();
+            }
+        })
+    })
+</script>
 </body>
 </html>
