--- a/reference/goodReads_finalProject/src/main/resources/templates/account/signup.html
+++ b/reference/goodReads_finalProject/src/main/resources/templates/account/signup.html
@@ -46,6 +46,12 @@
                         <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
                         <input type="password" name="re-pass" id="re-pass" placeholder="Repeat your password"/>
                     </div>
+                    <div class="form-group">
+
+                        <input type="checkbox" id="show-password"/>
+                        <label for="show-password" class="label-of-show-pass">Show password</label>
+
+                    </div>
 
                 </form>
                 <div class="form-group form-button">
@@ -53,7 +59,7 @@
                 </div>
             </div>
             <div class="signup-image text-center">
-                <figure><img src="account/img/signup-image.jpg" alt="sing up image"></figure>
+                <figure><a href="/"><img src="account/img/signup-image.jpg" alt="sing up image">Homepage</a></figure>
                 <a href="/login" class="link signup-image-link">I am already member</a>
             </div>
 
@@ -64,6 +70,8 @@
 </div>
 
 <!-- JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/core.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
 <script src="account/vendor/jquery/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
@@ -71,7 +79,16 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script th:src="@{account/js/main.js}"></script>
 <script th:src="@{/handle/authentication.js}"></script>
+<script>
+    $(document).ready(function () {
 
+        $('#email, #password, #re-pass').on('keyup', function (event) {
+            if (event.key !== 'Enter') {
+                $('#register-form').validate().resetForm();
+            }
+        })
+    })
+</script>
 </body>
 
 </html>
