--- a/reference/goodReads_finalProject/src/main/resources/templates/fragments/pagination.html
+++ b/reference/goodReads_finalProject/src/main/resources/templates/fragments/pagination.html
@@ -1,57 +1,49 @@
 <th:block th:fragment="pagination(currentPage,pageBookInfo)">
-    <div class="pt-30">
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <a class="page-link"
-                   th:href="@{/admin/books?pageIndex={page} (page=${currentPage-1})}"
-                   th:classappend="${currentPage == 1 ? 'disabled-link' : ''}">
-                    <button class="button -blue-1 size-40 rounded-full border-light">
-                        <i class="icon-chevron-left text-12"></i>
-                    </button>
-                </a>
-            </div>
-
-            <th:block th:if="${pageBookInfo.pageNumber}<=5">
-                <div class="col-auto">
-                    <div class="row x-gap-20 y-gap-20 items-center">
-                        <div class="col-auto flex-center">
-                            <a class="size-40 flex-center rounded-full"
-                               th:each="page:${#numbers.sequence(1,pageBookInfo.pageNumber)}"
-                               th:href="@{/admin/books(pageIndex=${page}) }"
-                               th:classappend="${currentPage == page ? 'bg-dark-1 text-white' : '' }">
-                                <div th:text="${page}">
-                                </div>
-                            </a>
-                        </div>
-                    </div>
+    <th:block th:if="${pageBookInfo.pageNumber}>0">
+        <div class="pt-30">
+            <div class="row justify-content-center">
+                <div class="ml-10 col-auto d-flex align-items-end">
+                    <label for="pageNumberInput" class="text-14 text-light-1 mr-10">Per page</label>
+                    <select class="text-14" id="pageNumberInput">
+                        <option th:value="5">5</option>
+                        <option th:value="10">10</option>
+                        <option th:value="20">20</option>
+                        <option th:value="50">50</option>
+                        <option th:value="100">100</option>
+                    </select>
                 </div>
-            </th:block>
-            <th:block th:if="${pageBookInfo.pageNumber}>5">
-                <th:block th:if="${currentPage}<=3">
+                <div class="col-auto">
+                    <a type="button" class="page-link previous-link"
+                       th:classappend="${currentPage == 1 ? 'disabled-link' : ''}">
+                        <button class="button -blue-1 size-40 rounded-full border-light">
+                            <i class="icon-chevron-left text-12"></i>
+                        </button>
+                    </a>
+                </div>
+
+                <th:block th:if="${pageBookInfo.pageNumber<=5 && pageBookInfo.pageNumber>0}">
                     <div class="col-auto">
                         <div class="row x-gap-20 y-gap-20 items-center">
                             <div class="col-auto flex-center">
-                                <a class="size-40 flex-center rounded-full"
-                                   th:each="page:${#numbers.sequence(1,5)}"
-                                   th:href="@{/admin/books(pageIndex=${page}) }"
+                                <a type="button" class="size-40 flex-center rounded-full chose-page"
+                                   th:each="page:${#numbers.sequence(1,pageBookInfo.pageNumber)}"
+                                   th:attr="page-number=${page}"
                                    th:classappend="${currentPage == page ? 'bg-dark-1 text-white' : '' }">
                                     <div th:text="${page}">
                                     </div>
                                 </a>
-                                <span>...</span>
                             </div>
                         </div>
                     </div>
                 </th:block>
-                <th:block th:if="${currentPage}>3">
-                    <th:block th:if="${currentPage}<${pageBookInfo.pageNumber}-2">
+                <th:block th:if="${pageBookInfo.pageNumber}>5">
+                    <th:block th:if="${currentPage}<=3">
                         <div class="col-auto">
                             <div class="row x-gap-20 y-gap-20 items-center">
                                 <div class="col-auto flex-center">
-                                    <span>...</span>
-                                    <a class="size-40 flex-center rounded-full"
-                                       th:each="page:${#numbers.sequence(currentPage-2,currentPage+2)}"
-                                       th:href="@{/admin/books(pageIndex=${page}) }"
+                                    <a type="button" class="size-40 flex-center rounded-full chose-page"
+                                       th:each="page:${#numbers.sequence(1,5)}"
+                                       th:attr="page-number=${page}"
                                        th:classappend="${currentPage == page ? 'bg-dark-1 text-white' : '' }">
                                         <div th:text="${page}">
                                         </div>
@@ -61,54 +53,73 @@
                             </div>
                         </div>
                     </th:block>
-                    <th:block th:if="${currentPage}>=${pageBookInfo.pageNumber}-2">
-                        <div class="col-auto">
-                            <div class="row x-gap-20 y-gap-20 items-center">
-                                <div class="col-auto flex-center">
-                                    <span>...</span>
-                                    <a class="size-40 flex-center rounded-full"
-                                       th:each="page:${#numbers.sequence(pageBookInfo.pageNumber-4,pageBookInfo.pageNumber)}"
-                                       th:href="@{/admin/books(pageIndex=${page}) }"
-                                       th:classappend="${currentPage == page ? 'bg-dark-1 text-white' : '' }">
-                                        <div th:text="${page}">
-                                        </div>
-                                    </a>
-
+                    <th:block th:if="${currentPage}>3">
+                        <th:block th:if="${currentPage}<${pageBookInfo.pageNumber}-2">
+                            <div class="col-auto">
+                                <div class="row x-gap-20 y-gap-20 items-center">
+                                    <div class="col-auto flex-center">
+                                        <span>...</span>
+                                        <a type="button" class="size-40 flex-center rounded-full chose-page"
+                                           th:each="page:${#numbers.sequence(currentPage-2,currentPage+2)}"
+                                           th:attr="page-number=${page}"
+                                           th:classappend="${currentPage == page ? 'bg-dark-1 text-white' : '' }">
+                                            <div th:text="${page}">
+                                            </div>
+                                        </a>
+                                        <span>...</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </th:block>
+                        <th:block th:if="${currentPage}>=${pageBookInfo.pageNumber}-2">
+                            <div class="col-auto">
+                                <div class="row x-gap-20 y-gap-20 items-center">
+                                    <div class="col-auto flex-center">
+                                        <span>...</span>
+                                        <a type="button" class="size-40 flex-center rounded-full chose-page"
+                                           th:each="page:${#numbers.sequence(pageBookInfo.pageNumber-4,pageBookInfo.pageNumber)}"
+                                           th:attr="page-number=${page}"
+                                           th:classappend="${currentPage == page ? 'bg-dark-1 text-white' : '' }">
+                                            <div th:text="${page}">
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </th:block>
                     </th:block>
                 </th:block>
-            </th:block>
 
-            <div class="col-auto d-flex d-inline">
-                <a class="page-link"
-                   th:classappend="${currentPage == pageBookInfo.pageNumber ? 'disabled-link' : ''}"
-                   th:href="@{/admin/books(pageIndex=${currentPage+1})}">
-                    <button class="button -blue-1 size-40 rounded-full border-light">
-                        <i class="icon-chevron-right text-12"></i>
-                    </button>
-                </a>
-                <span class="">
-                    <div class="col-auto d-flex align-items-end">
-<!--                        <input id="pageInput" type="number" class="form-control pt-0 text-12" placeholder="Chọn trang"-->
-                        <!--                               th:attr="pageNumber=${pageBookInfo.pageNumber}">-->
-<!--                        <input id="msdb-a" class="form-control text-12" type="text"-->
-                        <!--                               placeholder="Chọn trang..."-->
-                        <!--                               th:attr="pageNumber=${pageBookInfo.pageNumber}">-->
+                <div class="col-auto d-flex d-inline">
+                    <a type="button" class="page-link next-link"
+                       th:classappend="${currentPage == pageBookInfo.pageNumber ? 'disabled-link' : ''}">
+                        <button class="button -blue-1 size-40 rounded-full border-light">
+                            <i class="icon-chevron-right text-12"></i>
+                        </button>
+                    </a>
+                    <div class="ml-10 col-auto d-flex align-items-end">
+                        <label for="pageInput" class="text-14 text-light-1 mr-10">Chose page </label>
+                        <select class="form-control text-10" id="pageInput">
+                            <option th:each="page : ${#numbers.sequence(1,pageBookInfo.pageNumber)}"
+                                    th:value="${page}"
+                                    th:text="${page}"
+                                    th:selected="${page == currentPage}">
+                            </option>
+                        </select>
 
-                        <select class="form-control text-12" id="choses-page"
-                                multiple="multiple">
-                                            <option th:each="page : ${#numbers.sequence(1,pageBookInfo.pageNumber)}"
-                                                    th:value="${page}"
-                                                    th:text="${page}">
-                                            </option>
-                                        </select>
                     </div>
-
-                </span>
+                </div>
             </div>
         </div>
-    </div>
+    </th:block>
 
+    <th:block th:if="${pageBookInfo.pageNumber}==0">
+        <div class="col-auto">
+            <div class="row x-gap-20 y-gap-20 items-center">
+                <div class="col-auto flex-center">
+                    <h3>No Data!</h3>
+                </div>
+            </div>
+        </div>
+    </th:block>
 </th:block>
