--- a/reference/goodReads_finalProject/src/main/resources/templates/layout/layout.html
+++ b/reference/goodReads_finalProject/src/main/resources/templates/layout/layout.html
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" th:href="@{apple-touch-icon.png}">
+
     <link rel="stylesheet" th:href="@{/original/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/original/css/normalize.css}">
     <link rel="stylesheet" th:href="@{/original/css/font-awesome.min.css}">
@@ -20,6 +21,7 @@
     <link rel="stylesheet" th:href="@{/original/css/color.css}">
     <link rel="stylesheet" th:href="@{/original/css/responsive.css}">
     <script th:src="@{/original/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
+    <link rel="icon" th:href="@{/original/images/favicon1.ico}">
 
     <!--    Toastr-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css"
